overflow fix

--- a/client/static/assets/css/styles.less
+++ b/client/static/assets/css/styles.less
@@ -427,7 +427,7 @@ body {
 	@media only screen and (max-width: 680px){
 		
 		.page-contact .container {
-			margin-bottom: 2em;
+			padding-bottom: 4em;
 		}
 		.protfolio-container {
 
